# ponyfmt

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: debug.rs  formatter.rs  lib.rs  main.rs  parser.rs
tests/: formatter.rs
tests/examples/pony_project1/src/: simple.pony  simple_1.input  simple_2.input
tests/examples/pony_project2/src/: main.pony  main_1.input  message.pony
